# smart-audit

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SMART_AUDIT_HANDOFF.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.cursor/rules/: 00-project.mdc  backend.mdc  frontend.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 332b89327dc7_initial_schema.py  8aeb51c1026f_add_updated_at_to_metadata_tables.py  a1b2c3d4e5f6_add_notification_reads.py  a1b2c3d4e5f7_remove_photo_field_type.py  a9b0c1d2e3f4_add_is_active_to_teams.py  b0c1d2e3f4a5_create_audit_logs.py  b2c3d4e5f6a7_add_evidence_field_type.py  b3c4d5e6f7a8_remove_evidence_field_type.py  c1d2e3f4a5b6_add_assets_clients_asset_types.py  c3d4e5f6a7b8_add_section_field_type.py  c5d6e7f8a9b0_add_submission_conformities.py  d2e3f4a5b6c7_add_submissions_asset_id.py  d4e5f6a7b8c9_add_company_contact_fields.py  d6e7f8a9b0c1_add_instruction_to_form_fields.py  e3f4a5b6c7d8_add_component_dimension.py  e4f5a6b7c8d9_attachments_evidence_scope_expand.py  e5f6a7b8c9d0_add_password_reset_tokens.py  e7f8a9b0c1d2_add_dismissed_to_notification_reads.py  f5a6b7c8d9e0_attachments_evidence_scope_contract.py  f73cae8e6de7_add_teams_and_team_members.py  f8a9b0c1d2e3_add_revoked_at_to_memberships.py
backend/app/: main.py
backend/app/core/: config.py  errors.py  pagination.py  repositories.py  responses.py  security.py
backend/app/db/: __init__.py  session.py
backend/scripts/: create_user.py  export_openapi.py  inspect_form.py  link_user_company.py  seed_inspecao_veicular.py
backend/tests/: conftest.py
backend/tests/integration/: test_asset_types.py  test_assets.py  test_assets_schema.py  test_attachments.py  test_attachments_evidence_scope.py  test_audit_logs.py  test_auth.py  test_clients.py  test_companies.py  test_forms.py  test_forms_component.py  test_me.py  test_password_reset.py  test_search.py  test_submissions.py  test_submissions_advanced.py  test_submissions_asset.py  (+11 more)
db/: fix_postgres_ownership.sql  schema_v1.sql
docs/: AUDIT_REPORT.md  Arquitetura_Smart_Audit.md  DER_Smart_Audit.md  Deploy_Smart_Audit.md  Design_Record_Evolutivo.md  TECH_BACKLOG.md
docs/adr/: 0001-arquitetura-em-camadas.md  0002-backend-assincrono.md  0003-multi-tenancy-memberships.md  0004-rbac-por-guards.md  0005-versionamento-imutavel-de-formularios.md  0006-modelo-hibrido-de-respostas.md  0007-config-json-extensao-de-campo.md  0008-score-via-conformities.md  0009-soft-delete-por-semantica.md  0010-notificacoes-derivadas.md  0011-contrato-http-envelope-rfc7807.md  0012-hash-de-senha-pbkdf2.md  0013-email-infra-fail-soft.md  0014-convite-reaproveita-reset-de-senha.md  0015-modelo-de-ativos-genericos.md  0016-inspecao-por-componente-revisao-modelo-hibrido.md  0017-modelo-unificado-de-evidencias.md  ADR_TEMPLATE.md  README.md  template.md
docs/ai/: AI_DECISIONS.md  AI_MODELS.md  AI_RULES.md  AI_WORKFLOWS.md  START_HERE.md
docs/design-records/: DR-0001-ativos-genericos.md  DR-0002-inspecao-por-componente.md  DR-0003-geracao-checklist-ia.md  DR-0004-score-regulado.md  DR-0005-acoes-corretivas-laudo.md  DR-0006-abstracao-relatorio.md  README.md
docs/specs/: PLANO-DR-0001-Fase1.md  PLANO-DR-0002-Fase1.md  PLANO-DR-0002-Fases2-4.md  SPEC-DR-0001-Fase1-Ativos.md  SPEC-DR-0002-Fase1-SubmissionAsset.md  SPEC-DR-0002-Fases2-4-InspecaoPorComponente.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: asset-types.spec.ts  assets.spec.ts  auth.spec.ts  clients.spec.ts  dashboard.spec.ts  fixtures.ts  forms.spec.ts  notifications.spec.ts  search.spec.ts  submissions.spec.ts  teams.spec.ts  users.spec.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.vue  style.css
landing/: index.html
redesign-handoff/: AppShell.vue  Form Builder - Redesign.html  Inspeção - Redesign.html  LoginView.vue  PROMPT.md  README.md  Smart Audit Redesign.html  style.css
tela-de-inspecao-smart-audit/: package.json  pnpm-lock.yaml
tela-de-inspecao-smart-audit/app/: globals.css  layout.tsx  page.tsx
tela-de-inspecao-smart-audit/lib/: mock-data.ts  types.ts
(+210 files in other folders)
