[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-audit-backend"
version = "0.1.0"
description = "Backend foundation for Smart Audit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.16.0,<2.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "slowapi>=0.1.9,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "fpdf2>=2.8.0,<3.0.0",
  "openpyxl>=3.1.0,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "ruff>=0.12.0,<1.0.0"
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["backend/alembic/versions/*", "backend/scripts/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]