[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-audit-backend"
version = "0.1.0"
description = "Backend foundation for Smart Audit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.16.0,<2.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "PyJWT>=2.13.0,<3.0.0",
  "slowapi>=0.1.9,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "fpdf2>=2.8.0,<3.0.0",
  "openpyxl>=3.1.0,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "ruff>=0.12.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
  "pre-commit>=4.0.0,<5.0.0",
  "pytest-cov>=6.0.0,<8.0.0"
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["backend/alembic/versions/*", "backend/scripts/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# HTML email templates have long inline-CSS lines inside f-strings
"backend/app/core/email/templates.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
# Piso de cobertura (abaixo do atual ~79%): barra regressao sem bloquear hoje.
fail_under = 75

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
files = ["backend/app"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Introducao gradual num codebase existente: foca em erros de tipo reais sem
# exigir anotacao completa de todas as funcoes.
check_untyped_defs = true
warn_redundant_casts = true
exclude = ["backend/alembic/"]